<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:background="@color/cardBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.karem.entertainment.entertainmentDetailsFragments.EntertainmentInfoFragment">

        <LinearLayout
            android:id="@+id/MovieRateLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/movieCustomRateLinearLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/movieRateLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context="com.example.karem.entertainment.activities.MovieDetailsActivity">

                <ProgressBar
                    android:id="@+id/circularRatingProgressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="0dp"
                    android:indeterminate="false"
                    android:max="10"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:secondaryProgress="10" />

                <TextView
                    android:id="@+id/movieRateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    tools:text="25%" />

            </RelativeLayout>

            <TextView
                android:id="@+id/movieVoteCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:drawableEnd="@drawable/people"
                android:drawablePadding="2dp"
                android:textColor="@android:color/white"
                tools:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/movieCustomRateLinearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/MovieRateLinearLayout"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/movieCustomRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/movieAddRateTextView"
                app:layout_constraintTop_toTopOf="parent"
                tools:context="com.example.karem.entertainment.activities.MovieDetailsActivity">

                <ProgressBar
                    android:id="@+id/circularCustomRatingProgressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginBottom="0dp"
                    android:indeterminate="false"
                    android:max="10"
                    android:progress="0"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:secondaryProgress="10" />

                <TextView
                    android:id="@+id/movieCustomRateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@android:color/white" />

                <ImageView
                    android:id="@+id/addRateImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:src="@drawable/add_rate" />
            </RelativeLayout>

            <TextView
                android:id="@+id/movieAddRateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/info_fragment_add_rate"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/layoutBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieCustomRateLinearLayout" />

        <TextView
            android:id="@+id/movieInfoDescriptionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:layout_height="64dp"
            tools:text="MovieDescription" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_fragment_crew"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieInfoDescriptionTextView" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movieCrewRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintStart_toStartOf="@+id/movieInfoDescriptionTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/layoutBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieCrewRecyclerView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_fragment_trailer"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/movieCrewRecyclerView"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/movieTrailersRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/layoutBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieTrailersRecyclerView" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_fragment_media"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <ImageView
            android:id="@+id/movieBackdropsImageView"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/movie_media_image_view_background"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/moviePosterImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/moviePosterImageView"
            app:layout_constraintTop_toTopOf="@+id/moviePosterImageView"
            app:srcCompat="@mipmap/ic_launcher" />

        <ImageView
            android:id="@+id/moviePosterImageView"
            android:layout_width="0dp"
            android:layout_height="136dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:background="@drawable/movie_media_image_view_background"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintWidth_percent="0.26"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/info_fragment_poster"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/moviePosterImageView"
            app:layout_constraintStart_toStartOf="@+id/moviePosterImageView" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/info_fragment_backdrops"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="@+id/movieBackdropsImageView"
            app:layout_constraintStart_toStartOf="@+id/movieBackdropsImageView" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/layoutBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieBackdropsImageView" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/info_fragment_details"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />

        <FrameLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/fragmentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>