<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/layoutBackground"
        android:orientation="vertical"
        tools:context=".EntertainmentHomeFragments.MoviesFragment">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="6dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/nowPlayingMoviesCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackground"

                android:padding="8dp">

                <TextView
                    android:id="@+id/nowPlayingTextMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/movie_icon"
                    android:text="@string/now_playing"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/nowPlayingRecyclerViewMovies"
                    android:layout_width="match_parent"
                    android:layout_height="223dp"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/nowPlayingTextMovies"
                    app:layout_constraintTop_toBottomOf="@+id/nowPlayingTextMovies"
                    tools:listitem="@layout/entertainment_recycler_view_item" />

                <ImageButton
                    android:id="@+id/showAllNowPlayingMoviesIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/cardBackground"
                    android:src="@drawable/more_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ProgressBar
                    android:id="@+id/loadingNowPlayingMovies"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/nowPlayingRecyclerViewMovies"
                    app:layout_constraintStart_toStartOf="@+id/nowPlayingRecyclerViewMovies"
                    app:layout_constraintTop_toTopOf="@+id/nowPlayingRecyclerViewMovies" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="6dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/upcomingMoviesCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackground"
                android:padding="8dp">

                <TextView
                    android:id="@+id/upcomingTextMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/movie_icon"
                    android:text="@string/upcoming_movies"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/upcomingMoviesCard" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/upcomingRecyclerViewMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/upcomingTextMovies"
                    app:layout_constraintTop_toBottomOf="@+id/upcomingTextMovies"
                    tools:listitem="@layout/entertainment_recycler_view_item" />

                <ImageButton
                    android:id="@+id/showAllUpcomingMoviesIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/cardBackground"
                    android:src="@drawable/more_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/upcomingMoviesCard" />

                <ProgressBar
                    android:id="@+id/loadingUpComingMovies"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/upcomingRecyclerViewMovies"
                    app:layout_constraintStart_toStartOf="@+id/upcomingRecyclerViewMovies"
                    app:layout_constraintTop_toTopOf="@+id/upcomingRecyclerViewMovies" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="6dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/topRatedMoviesCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackground"
                android:padding="8dp">

                <TextView
                    android:id="@+id/topRatedTextMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/movie_icon"
                    android:text="@string/top_rated"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/topRatedMoviesCard" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/topRatedRecyclerViewMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/topRatedTextMovies"
                    app:layout_constraintTop_toBottomOf="@+id/topRatedTextMovies"
                    tools:listitem="@layout/entertainment_recycler_view_item" />

                <ImageButton
                    android:id="@+id/showAllTopRatedMoviesIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/cardBackground"
                    android:src="@drawable/more_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/topRatedMoviesCard" />

                <ProgressBar
                    android:id="@+id/loadingTopRatedMovies"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/topRatedRecyclerViewMovies"
                    app:layout_constraintStart_toStartOf="@+id/topRatedRecyclerViewMovies"
                    app:layout_constraintTop_toTopOf="@+id/topRatedRecyclerViewMovies" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="235dp"
            app:cardCornerRadius="6dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/popularMoviesCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardBackground"
                android:padding="8dp">

                <TextView
                    android:id="@+id/popularTextMovies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:drawablePadding="16dp"
                    android:drawableStart="@drawable/movie_icon"
                    android:text="@string/popular"
                    android:textColor="@android:color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/popularMoviesCard" />


                <android.support.v7.widget.RecyclerView
                    android:id="@+id/popularRecyclerViewMovies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="@+id/popularTextMovies"
                    app:layout_constraintTop_toBottomOf="@+id/popularTextMovies"
                    tools:listitem="@layout/entertainment_recycler_view_item" />

                <ImageButton
                    android:id="@+id/showAllPopularMoviesIcon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:background="@color/cardBackground"
                    android:src="@drawable/more_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/popularMoviesCard" />

                <ProgressBar
                    android:id="@+id/loadingPopularMovies"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/popularRecyclerViewMovies"
                    app:layout_constraintStart_toStartOf="@+id/popularRecyclerViewMovies"
                    app:layout_constraintTop_toTopOf="@+id/popularRecyclerViewMovies" />

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>